--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-hello   puzzler
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to the Game Developer's Homepage. We are professionals in game development, with successful titles like Candy Sweet Legends and Aquarium Match 3:Ocean Party.">
+    <meta name="keywords" content="game developer, Candy Sweet Legends, Aquarium Match 3:Ocean Party, game development">
+    <meta name="author" content="Your Name">
+
+    <title>Game Developer's Homepage</title>
+
+    <!-- Add your custom styles or link to an external stylesheet -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px;
+            text-align: center;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Welcome to the Game Developer's Homepage</h1>
+        <p>We are professionals in game development, crafting engaging and entertaining experiences.</p>
+    </header>
+
+    <section>
+        <h2>Our Featured Games</h2>
+        <p>Check out our successful titles:</p>
+        <ul>
+            <li>Candy Sweet Legends</li>
+            <li>Aquarium Match 3:Ocean Party</li>
+        </ul>
+    </section>
+
+    <!-- Add more sections and content as needed -->
+
+    <footer>
+        <p>&copy; 2024 Game Developer. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
