--- a/yinsi.html
+++ b/yinsi.html
@@ -1,1 +1,84 @@
-yinsi
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to our service! We highly value your privacy, and this Privacy Policy explains how we collect, use, disclose, and protect your personal information.">
+    <meta name="author" content="Your Name">
+    <title>Privacy Policy</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            line-height: 1.6;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px;
+            text-align: left;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Privacy Policy</h1>
+        <p>Welcome to our service! We highly value your privacy, and this Privacy Policy explains how we collect, use, disclose, and protect your personal information.</p>
+    </header>
+
+    <section>
+        <h2>1. Collection and Use of Information</h2>
+        <p>a. <strong>Advertisements</strong><br>
+            Our service may include third-party advertisements that use cookies and similar tracking technologies to collect and store information about your activities. Please note that we are not responsible for the information collection and use practices of these advertisements.</p>
+
+        <p>b. <strong>Google Firebase Analytics</strong><br>
+            We use Google Firebase Analytics to understand how users interact with our application. This may include device information, usage statistics, but it does not include personally identifiable information.</p>
+    </section>
+
+    <section>
+        <h2>2. User Registration and Login</h2>
+        <p>We do not provide user registration and login functionality, and we do not collect personal information related to such activities. You can use our service anonymously without providing personal identity information.</p>
+    </section>
+
+    <section>
+        <h2>3. Protection of Information</h2>
+        <p>We have implemented a range of security measures to protect your personal information from unauthorized access, use, or disclosure. However, please be aware that due to the nature of the internet, we cannot guarantee the absolute security of your information.</p>
+    </section>
+
+    <section>
+        <h2>4. Legal Requirements</h2>
+        <p>We reserve the right to disclose your personal information as required by law, regulations, court orders, or government requests.</p>
+    </section>
+
+    <section>
+        <h2>5. Notification of Changes</h2>
+        <p>We may update this Privacy Policy from time to time. In the case of significant changes, we will notify you through appropriate means to ensure you are aware of how we handle your information.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Company. All rights reserved. For questions or concerns, contact us at <a href="mailto:liming1990010122@outlook.com">liming1990010122@outlook.com</a>.</p>
+    </footer>
+</body>
+
+</html>
