--- a/fuwu.html
+++ b/fuwu.html
@@ -1,1 +1,75 @@
-fuwu
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Terms of Service for [Your Company]">
+    <meta name="author" content="Your Name">
+    <title>Terms of Service</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            line-height: 1.6;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px;
+            text-align: left;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Terms of Service</h1>
+        <p>These Terms of Service govern your use of [Your Company]'s services. By using our services, you agree to abide by these terms.</p>
+    </header>
+
+    <section>
+        <h2>1. Acceptance of Terms</h2>
+        <p>By accessing or using our services, you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, you may not use our services.</p>
+
+        <h2>2. Use of Services</h2>
+        <p>You agree to use our services for lawful purposes only. You are responsible for maintaining the confidentiality of your account and password.</p>
+
+        <h2>3. Intellectual Property</h2>
+        <p>All content and materials available on our services, including but not limited to text, graphics, logos, icons, images, and software, are the property of [Your Company] and are protected by applicable intellectual property laws.</p>
+
+        <h2>4. Limitation of Liability</h2>
+        <p>[Your Company] is not liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with the use of our services.</p>
+
+        <h2>5. Privacy</h2>
+        <p>Your use of our services is also governed by our Privacy Policy, which can be found [link to privacy policy].</p>
+
+        <h2>6. Termination</h2>
+        <p>[Your Company] reserves the right to terminate or suspend your access to our services at any time, without notice, for any reason.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Company. All rights reserved. For questions or concerns, contact us at <a href="mailto:info@yourcompany.com">info@yourcompany.com</a>.</p>
+    </footer>
+</body>
+
+</html>
