--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <!-- Add your custom styles or link to an external stylesheet -->
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            background-color: #f5f5f5; /* Light background color */
         }
 
         header {
-            background-color: #333;
+            background-color: #ff6600; /* Orange header background */
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -31,8 +32,20 @@
             text-align: center;
         }
 
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background-color: #ffcc00; /* Yellow list item background */
+            margin: 5px;
+            padding: 10px;
+            border-radius: 10px;
+        }
+
         footer {
-            background-color: #333;
+            background-color: #ff6600; /* Orange footer background */
             color: #fff;
             padding: 10px;
             text-align: center;
@@ -61,7 +74,7 @@
     <!-- Add more sections and content as needed -->
 
     <footer>
-        <p>&copy; 2024 Game Developer. All rights reserved.</p>
+        <p>&copy; 2024 Game Developer. All rights reserved. For more information, read our <a href="https://puzzlercloud.github.io/yinsi.html" target="_blank">Privacy Policy</a> and <a href="https://puzzlercloud.github.io/fuwu.html" target="_blank">Terms of Service</a>.</p>
     </footer>
 </body>
 
